fix info tooltip positioning and prevent wrapping on group label

--- a/airbyte-webapp/src/components/LabeledControl/ControlLabels.module.scss
+++ b/airbyte-webapp/src/components/LabeledControl/ControlLabels.module.scss
@@ -9,7 +9,6 @@
   display: inline;
   color: colors.$grey-300;
   font-style: oblique;
-  padding-left: 5px;
 }
 
 .tooltip {
