--- a/airbyte-webapp/src/views/Connector/ServiceForm/components/Sections/GroupLabel.module.scss
+++ b/airbyte-webapp/src/views/Connector/ServiceForm/components/Sections/GroupLabel.module.scss
@@ -7,4 +7,5 @@
   display: flex;
   align-items: center;
   background-color: colors.$white;
+  white-space: nowrap;
 }
